--- a/style/fresh/css/base.css
+++ b/style/fresh/css/base.css
@@ -97,6 +97,7 @@ button:hover, input[type="button"]:hover, input[type="submit"]:hover {
     box-shadow: 0 3px 3px rgba(0,0,0,.25);
     color: #ffffff;
     margin-right: 2%;
+    padding: 5px 0;
     width: 25%;
 }
 
